ISSUE-#98 Rework slide entries positioning, fix slide view bottom gap

--- a/src/components/SlidePanel/SlideEntry/SlideEntry.module.css
+++ b/src/components/SlidePanel/SlideEntry/SlideEntry.module.css
@@ -1,13 +1,15 @@
 .slideEntry
 {
-  width: 90%;
-  height: 16%;
-  margin-left: 5%;
-  margin-top: 10px;
+  position: relative;
+
+  margin-top: 5px;
+  margin-bottom: 10px;
+
   border: 2px solid #969696;
   border-radius: 2px;
+
   cursor: pointer;
-  margin-bottom: 10px;
+
   background: #fdf9f8;
 }
 
@@ -18,25 +20,29 @@
 
 .slideIndex
 {
-  font-size: 1.2em;
-  color: black;
-  margin-left: -13px;
-  user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  -webkit-user-select: none;
+  font-size: 0.9em;
+  font-family: 'Noto Sans', sans-serif;
+  position: absolute;
+  top: 5px;
+  left: 5px;
 }
 
 .slideView
 {
-  width: 85%;
+  position: relative;
+  top: 50%;
+  left: 50%;
+
+  width: 80%;
   height: auto;
+
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 8px;
+
   border: 1px solid #000000;
   border-radius: 2px;
 
-  position: relative;
-  left: 50%;
-  top: 37%;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%);
+  transform: translate(-50%);
 }
